--- a/Game/src/main/resources/templates/game/altajuego.html
+++ b/Game/src/main/resources/templates/game/altajuego.html
@@ -38,6 +38,10 @@
                     <option value="18">18</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="unidades">Unidades:</label>
+                <input type="number" class="form-control" id="unidades" name="unidades" step="1" required>
+            </div>            
             <button type="submit" class="btn btn-primary">Guardar</button>
         </form>
     </div>
